# watersense-backend

./: .gitignore  development.yaml  docker-compose.yaml  readme.md
api-server/: .env  Dockerfile_dev  Dockerfile_prod  pyproject.toml
api-server/docker/: build.sh
api-server/src/: main.py  mock_data.py
api-server/src/config/: config.py  db.py
api-server/src/dao/: sensor.py  user.py  utils.py
api-server/src/models/: models.py
api-server/src/static/: recommendations.json  statistics.json
api-server/tests/: test_api_server.py
docker/api-server/: build.sh
docker/ingestion-module/: build.sh
ingestion-module/: .env  Dockerfile_prod  pyproject.toml
ingestion-module/src/: amqp_sample_producer.py  main.py  mock_sensor.py
ingestion-module/src/config/: amqp.py  config.py  db.py
ingestion-module/src/dao/: sensor.py
k8s/api-server/: deployment.yaml  service.yaml
k8s/ingestion-module/: deployment.yaml
rabbitmq/: .gitignore
