[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sean Jin <seanjin97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.5"
python-dotenv = "^0.19.2"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
